Update package.json for git homepage

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
-{
+"homepage": "https://hlin0023.github.io/hotel-booking-project",
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+  {
   "name": "bookingsystem",
   "version": "0.1.0",
   "private": true,
@@ -25,5 +29,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
+}
 }
