--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
-"homepage": "https://hlin0023.github.io/hotel-booking-project",
-"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
-  {
+{
   "name": "bookingsystem",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hlin0023.github.io/hotel-booking-project",
   "dependencies": {
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
@@ -16,7 +13,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -31,7 +36,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.1.0"
   }
-}
 }
